# cryptosphere

./: .rspec  .ruby-gemset  .rvmrc  .travis.yml  Cargo.toml  Gemfile  Guardfile  README.md  Rakefile  cryptosphere.gemspec
benchmarks/: block_benchmark.rb
frontend/: index.html
frontend/css/: style.css
frontend/js/: password.js
lib/: cryptosphere.rb
lib/cryptosphere/: app.rb  block.rb  bucket.rb  cli.rb  encoding.rb  git.rb  head.rb  identity.rb  node.rb  node_builder.rb  pkt_line.rb  pkt_line_reader.rb  position.rb  resource.rb  tree.rb  version.rb
lib/cryptosphere/assets/: index.html  password.html
lib/cryptosphere/blobs/: blob.rb  tree.rb
lib/cryptosphere/crypto/: asymmetric_cipher.rb  kdf.rb  signature_algorithm.rb
lib/cryptosphere/data/: node.rb
lib/cryptosphere/git/: pack_object.rb  pack_reader.rb  receive_pack.rb  refs.rb
lib/cryptosphere/head/: read_head.rb  write_head.rb
lib/cryptosphere/heads/: read_head.rb  write_head.rb
lib/cryptosphere/protocol/: handshake.rb
lib/cryptosphere/resources/: asset.rb  home.rb
lib/webmachine/adapters/: cryptosphere_reel.rb
spec/: integration_helper.rb  spec_helper.rb
spec/cryptosphere/: block_spec.rb  bucket_spec.rb  encoding_spec.rb  head_spec.rb  identity_spec.rb  node_builder_spec.rb  node_spec.rb  pkt_line_reader_spec.rb  pkt_line_spec.rb  resource_spec.rb  tree_spec.rb
spec/cryptosphere/blobs/: blob_spec.rb  tree_spec.rb
spec/fixtures/: alice.key  bob.key  example.key  packfile
src/: main.rs
tasks/: benchmarks.rake  ci.rake
webui/: index.html
webui/css/: password.css
(+17 files in other folders)
