[package]
name        = "cryptosphere"
description = "Encrypted peer-to-peer web application and storage platform"
homepage    = "https://github.com/cryptosphere/cryptosphere"
repository  = "https://github.com/cryptosphere/cryptosphere.git"
readme      = "README.md"
keywords    = ["web", "p2p", "storage", "security", "platform", "cryptography"]
license     = "MIT"
version     = "0.0.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]

[dependencies.nickel]
